test/inputs/expr/bad/badly-indented-choice-comma.miros
$|4⟨
  test,
  @best
  ,
  heist
⟩
